logs/sia-scpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/scpy'...
Compiling './lib/python3.5/site-packages/scpy/gateway.py'...
***   File "./lib/python3.5/site-packages/scpy/gateway.py", line 25
    return self.scpy.post_api(f'/gateway/connect/{address}')
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scpy/host.py'...
***   File "./lib/python3.5/site-packages/scpy/host.py", line 139
    return self.scpy.post_api(f'/host/storage/sectors/delete/{merkleroot}')
                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scpy/hostdb.py'...
***   File "./lib/python3.5/site-packages/scpy/hostdb.py", line 37
    return self.scpy.get_api(f'/hostdb/hosts/{pubkey}')
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scpy/renter.py'...
***   File "./lib/python3.5/site-packages/scpy/renter.py", line 74
    return self.scpy.post_api(f'/renter/delete/{path}')
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scpy/tpool.py'...
***   File "./lib/python3.5/site-packages/scpy/tpool.py", line 24
    return self.scpy.get_api(f'/tpool/raw/{id}')
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scpy/wallet.py'...
***   File "./lib/python3.5/site-packages/scpy/wallet.py", line 159
    return self.scpy.get_api(f'/wallet/transaction/{id}')['transaction']
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sia_scpy-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
